Fix container z-index

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -40,6 +40,7 @@ body::after {
   display: flex;
   flex-direction: column;
   align-items: center;
+  z-index: 1;
 }
 
 .picture {
